tests/ui/macros/concat.stderr
error: cannot concatenate a byte string literal
  --> $DIR/concat.rs:2:13
   |
LL |     concat!(b'f');
   |             ^^^^

error: cannot concatenate a byte string literal
  --> $DIR/concat.rs:3:13
   |
LL |     concat!(b"foo");
   |             ^^^^^^

error: expected a literal
  --> $DIR/concat.rs:4:13
   |
LL |     concat!(foo);
   |             ^^^
   |
   = note: only literals (like `"foo"`, `-42` and `3.14`) can be passed to `concat!()`

error: expected a literal
  --> $DIR/concat.rs:5:13
   |
LL |     concat!(foo());
   |             ^^^^^
   |
   = note: only literals (like `"foo"`, `-42` and `3.14`) can be passed to `concat!()`

error: aborting due to 4 previous errors

